--- a/offers.html
+++ b/offers.html
@@ -86,7 +86,6 @@
         color: #aaa;
       }
 
-      /* ✅ Preview styling */
       .image-preview {
         width: 150px;
         height: 150px;
@@ -97,7 +96,21 @@
         border: 2px solid #ccc;
       }
 
-      /* ✅ Debug info box */
+      #multiPreview {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        margin-top: 10px;
+      }
+
+      #multiPreview img {
+        width: 120px;
+        height: 120px;
+        object-fit: cover;
+        border-radius: 10px;
+        border: 2px solid #ccc;
+      }
+
       .debug-info {
         background: #f0f0f0;
         border: 1px solid #ddd;
@@ -146,7 +159,6 @@
   </head>
 
   <body>
-    <!-- LOGIN SCREEN -->
     <div id="loginScreen">
       <div id="loginBox">
         <h2><i class="fas fa-lock"></i> تسجيل دخول المسؤول</h2>
@@ -159,12 +171,9 @@
       </div>
     </div>
 
-    <!-- MAIN DASHBOARD -->
     <div class="container">
       <aside class="sidebar" id="sidebar">
-        <div class="logo">
-          <span>CONAN DASHBOARD</span>
-        </div>
+        <div class="logo"><span>CONAN DASHBOARD</span></div>
         <nav class="menu">
           <a href="dashboard.html"
             ><i class="fa-solid fa-gauge"></i> لوحة القيادة</a
@@ -182,7 +191,7 @@
             ><i class="fa-solid fa-robot"></i> إعدادات الذكاء الاصطناعي</a
           >
           <a href="offers.html" class="active"
-            ><i class="fa-solid fa-gift"></i>الحملات الاعلانية</a
+            ><i class="fa-solid fa-gift"></i> الحملات الاعلانية</a
           >
         </nav>
       </aside>
@@ -221,16 +230,15 @@
               placeholder="اكتب تفاصيل العرض هنا..."
             ></textarea>
 
-            <label>اختيار صورة العرض (اختياري)</label>
-            <input type="file" id="offerImage" accept="image/*" />
-            <img id="imagePreview" class="image-preview" alt="معاينة الصورة" />
+            <label>اختيار صور العرض (يمكن اختيار أكثر من صورة)</label>
+            <input type="file" id="offerImage" accept="image/*" multiple />
+            <div id="multiPreview"></div>
 
             <label>تاريخ انتهاء العرض</label>
             <input type="date" id="offerDate" />
 
             <button id="sendBtn" onclick="sendOffer()">إرسال العرض الآن</button>
 
-            <!-- Debug Info -->
             <div class="debug-info" id="debugInfo">
               <h4>🔍 معلومات التشخيص</h4>
               <div id="debugContent"></div>
@@ -244,31 +252,24 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script>
-      // 🔑 Supabase configuration
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
       const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-      // 🔍 Debug helper
-      function addDebugLog(message, type = "info") {
-        const debugContent = document.getElementById("debugContent");
-        const debugInfo = document.getElementById("debugInfo");
-        debugInfo.style.display = "block";
-
-        const timestamp = new Date().toLocaleTimeString("ar-EG");
+      function addDebugLog(msg, type = "info") {
+        const box = document.getElementById("debugContent");
+        const debug = document.getElementById("debugInfo");
+        debug.style.display = "block";
         const icon = type === "error" ? "❌" : type === "success" ? "✅" : "ℹ️";
-
-        debugContent.innerHTML += `<div>[${timestamp}] ${icon} ${message}</div>`;
-        debugContent.scrollTop = debugContent.scrollHeight;
-        console.log(`[${timestamp}] ${message}`);
+        const time = new Date().toLocaleTimeString("ar-EG");
+        box.innerHTML += `<div>[${time}] ${icon} ${msg}</div>`;
+        box.scrollTop = box.scrollHeight;
       }
 
-      // 🔐 Login logic
       async function login() {
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value.trim();
-
         const { data } = await supabase
           .from("admin_auth")
           .select("*")
@@ -296,136 +297,75 @@
         document.getElementById("dashboardContent").style.display = "block";
       }
 
-      // 🌙 Theme toggle
-      const themeToggle = document.getElementById("themeToggle");
-      themeToggle.addEventListener("click", function () {
-        document.body.classList.toggle("dark");
-        const icon = themeToggle.querySelector("i");
-        if (document.body.classList.contains("dark")) {
-          icon.classList.replace("fa-moon", "fa-sun");
-          localStorage.setItem("clinic_theme", "dark");
-        } else {
-          icon.classList.replace("fa-sun", "fa-moon");
-          localStorage.setItem("clinic_theme", "light");
-        }
-      });
-      if (localStorage.getItem("clinic_theme") === "dark") {
-        document.body.classList.add("dark");
-        const icon = themeToggle.querySelector("i");
-        icon.classList.replace("fa-moon", "fa-sun");
-      }
-
-      // 🖼️ Preview image before upload
       const offerImage = document.getElementById("offerImage");
-      const imagePreview = document.getElementById("imagePreview");
+      const multiPreview = document.getElementById("multiPreview");
       offerImage.addEventListener("change", () => {
-        const file = offerImage.files[0];
-        if (file) {
-          addDebugLog(
-            `تم اختيار صورة: ${file.name} (${(file.size / 1024).toFixed(2)} KB)`
-          );
+        multiPreview.innerHTML = "";
+        Array.from(offerImage.files).forEach((file) => {
           const reader = new FileReader();
           reader.onload = (e) => {
-            imagePreview.src = e.target.result;
-            imagePreview.style.display = "block";
+            const img = document.createElement("img");
+            img.src = e.target.result;
+            multiPreview.appendChild(img);
           };
           reader.readAsDataURL(file);
-        } else {
-          imagePreview.style.display = "none";
-        }
+        });
       });
 
-      // 🚀 Send offer
       async function sendOffer() {
         const sendBtn = document.getElementById("sendBtn");
         const title = document.getElementById("offerTitle").value.trim();
         const desc = document.getElementById("offerDesc").value.trim();
         const date = document.getElementById("offerDate").value;
-        const file = offerImage.files[0];
+        const files = Array.from(offerImage.files);
 
-        // Clear previous debug logs
         document.getElementById("debugContent").innerHTML = "";
-        document.getElementById("debugInfo").style.display = "block";
-
         if (!title || !desc || !date) {
           alert("⚠️ يرجى تعبئة جميع الحقول قبل الإرسال.");
           addDebugLog("فشل: حقول مفقودة", "error");
           return;
         }
 
-        // Disable button during send
         sendBtn.disabled = true;
         sendBtn.innerHTML = 'جاري الإرسال... <span class="spinner"></span>';
 
-        let imageUrl = null;
+        let imageUrls = [];
 
-        if (file) {
-          try {
-            addDebugLog(`بدء رفع الصورة: ${file.name}`);
-
-            const uniqueName = `${Date.now()}_${file.name}`;
-            const { data, error } = await supabase.storage
-              .from("offers")
-              .upload(uniqueName, file, {
-                cacheControl: "3600",
-                upsert: false,
-              });
-
-            if (error) {
-              addDebugLog(`خطأ في رفع الصورة: ${error.message}`, "error");
-              throw error;
-            }
-
-            const { data: urlData } = supabase.storage
-              .from("offers")
-              .getPublicUrl(uniqueName);
-
-            imageUrl = urlData.publicUrl;
-            addDebugLog(`✅ تم رفع الصورة بنجاح`, "success");
-            addDebugLog(`رابط الصورة: ${imageUrl}`);
-
-            // ⚠️ Test if image URL is accessible
+        if (files.length > 0) {
+          addDebugLog(`📤 بدء رفع ${files.length} صورة...`);
+          for (const file of files) {
             try {
-              const testResponse = await fetch(imageUrl, { method: "HEAD" });
-              if (testResponse.ok) {
-                addDebugLog(`✅ الصورة متاحة للوصول العام`, "success");
-              } else {
+              const name = `${Date.now()}_${file.name}`;
+              const { error } = await supabase.storage
+                .from("offers")
+                .upload(name, file, { cacheControl: "3600", upsert: false });
+              if (error) {
                 addDebugLog(
-                  `⚠️ الصورة غير متاحة (كود: ${testResponse.status})`,
+                  `❌ فشل رفع ${file.name}: ${error.message}`,
                   "error"
                 );
-                addDebugLog(
-                  `تأكد من أن bucket "offers" عام في إعدادات Supabase`,
-                  "error"
-                );
+                continue;
               }
+              const { data: urlData } = supabase.storage
+                .from("offers")
+                .getPublicUrl(name);
+              imageUrls.push(urlData.publicUrl);
+              addDebugLog(`✅ رفع ${file.name} تم بنجاح`);
             } catch (e) {
-              addDebugLog(`⚠️ لم يتم التحقق من إمكانية الوصول للصورة`, "error");
+              addDebugLog(`❌ خطأ في رفع ${file.name}: ${e.message}`, "error");
             }
-          } catch (err) {
-            console.error("❌ Image upload error:", err);
-            addDebugLog(`خطأ في رفع الصورة: ${err.message}`, "error");
-            alert("⚠️ حدث خطأ أثناء رفع الصورة. سيتم الإرسال بدون صورة.");
-            imageUrl = null;
           }
-        } else {
-          addDebugLog("لم يتم اختيار صورة - سيتم الإرسال بدون صورة");
-        }
+        } else addDebugLog("لم يتم اختيار صور", "info");
 
         try {
-          const phone = "962785050875"; // ✅ Replace with recipient phone number
-
           const payload = {
             name: "Smile Clinic",
-            phone: phone,
+            phone: "962785050875",
             service: title,
             appointment: `${desc}\n⏰ صالح حتى: ${date}`,
-            image: imageUrl,
+            images: imageUrls, // send array
           };
-
-          addDebugLog("إرسال الطلب إلى WhatsApp API...");
-          addDebugLog(`البيانات: ${JSON.stringify(payload, null, 2)}`);
-
+          addDebugLog("🚀 إرسال الطلب...");
           const res = await fetch(
             "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
             {
@@ -434,52 +374,53 @@
               body: JSON.stringify(payload),
             }
           );
-
           const data = await res.json();
-          addDebugLog(`استجابة API: ${JSON.stringify(data, null, 2)}`);
-
+          addDebugLog(`📨 استجابة API: ${JSON.stringify(data, null, 2)}`);
           if (data.success) {
-            if (data.fallback) {
-              addDebugLog("⚠️ تم الإرسال بنجاح لكن بدون صورة", "error");
-              alert("⚠️ تم إرسال العرض بنجاح (نص فقط - فشل إرسال الصورة)");
-            } else {
-              addDebugLog("✅ تم إرسال العرض بنجاح مع الصورة!", "success");
-              alert("✅ تم إرسال العرض بنجاح!");
-            }
-
-            // Clear form
+            alert("✅ تم إرسال العرض بنجاح!");
+            addDebugLog("✅ تم الإرسال بنجاح!", "success");
             document.getElementById("offerTitle").value = "";
             document.getElementById("offerDesc").value = "";
             document.getElementById("offerDate").value = "";
-            document.getElementById("offerImage").value = "";
-            imagePreview.style.display = "none";
+            offerImage.value = "";
+            multiPreview.innerHTML = "";
           } else {
-            console.error("❌ Send failed:", data);
-            addDebugLog(`فشل الإرسال: ${JSON.stringify(data)}`, "error");
-            alert(
-              "⚠️ فشل إرسال العرض: " +
-                (data.error?.message || data.message || "خطأ غير معروف")
-            );
+            addDebugLog("❌ فشل الإرسال", "error");
+            alert("❌ فشل إرسال العرض.");
           }
-        } catch (err) {
-          console.error("❌ Error sending offer:", err);
-          addDebugLog(`خطأ في الإرسال: ${err.message}`, "error");
-          alert("❌ خطأ أثناء الإرسال: " + err.message);
+        } catch (e) {
+          addDebugLog(`❌ خطأ أثناء الإرسال: ${e.message}`, "error");
+          alert("❌ خطأ أثناء الإرسال: " + e.message);
         } finally {
-          // Re-enable button
           sendBtn.disabled = false;
           sendBtn.innerHTML = "إرسال العرض الآن";
         }
       }
 
-      // 📱 Menu toggle for mobile
+      const themeToggle = document.getElementById("themeToggle");
+      themeToggle.addEventListener("click", () => {
+        document.body.classList.toggle("dark");
+        const i = themeToggle.querySelector("i");
+        if (document.body.classList.contains("dark")) {
+          i.classList.replace("fa-moon", "fa-sun");
+          localStorage.setItem("clinic_theme", "dark");
+        } else {
+          i.classList.replace("fa-sun", "fa-moon");
+          localStorage.setItem("clinic_theme", "light");
+        }
+      });
+
+      if (localStorage.getItem("clinic_theme") === "dark") {
+        document.body.classList.add("dark");
+        themeToggle.querySelector("i").classList.replace("fa-moon", "fa-sun");
+      }
+
       const menuToggle = document.getElementById("menuToggle");
       const sidebar = document.getElementById("sidebar");
-      if (menuToggle) {
-        menuToggle.addEventListener("click", () => {
-          sidebar.classList.toggle("active");
-        });
-      }
+      if (menuToggle)
+        menuToggle.addEventListener("click", () =>
+          sidebar.classList.toggle("active")
+        );
     </script>
   </body>
 </html>
